# Alzheimer-s-AI4All-

./: 2017_2022_MEFI.ipynb  Alzeimer's Notebook.ipynb  Pasted--Search-datasets-Login-DARWIN-Donated-on-5-11-2022-The-DARWIN-dataset-includes-handwriting-data-fr-1730852092734.txt  Pasted-Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can-now-v-1730853636353.txt  README.md  Training_Elena.ipynb  darwin.ipynb  data.parquet  main.py  pyproject.toml  requirements.txt  svm_model.pkl
.cache/matplotlib/: fontlist-v390.json
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.streamlit/: config.toml
.upm/: store.json
components/: advanced_analysis.py  dataset_info.py  feature_analysis.py  model_prediction.py  visualizations.py
