[project]
name = "repl-nix-streamlit-svm-visualizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "streamlit>=1.39.0",
    "ucimlrepo>=0.0.7",
]
