[tool.poetry]
name = "ai-4all-alzheimers"
version = "0.1.0"
description = "Add your description here"
authors = ["tarive22@gmail.com"]  
license = "MIT"  
readme = "README.md" 
homepage = "https://yourprojecthomepage.com" 
repository = "https://github.com/Tar-ive/Alzheimer-s-AI4All-"  

# Existing project section
[project]
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "streamlit>=1.39.0",
    "ucimlrepo>=0.0.7",
]
